--- a/src/styles/hero.css
+++ b/src/styles/hero.css
@@ -22,6 +22,7 @@
   top: 0; left: 0;
   width: 100%;
   height: 100%;
+  min-height: 2500px; /* Prevents SVG graphics from squishing vertically on short pages */
   display: block;
 }
 .rpath {
